bugfux horizontal scrolling

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ h3 {
 
 /* ===================== headers ========================== */
 header {
-  margin: 0 auto 1rem;
+  margin: 0 0 1rem;
   padding: 1rem;
   max-width: 80rem;
   flex-shrink: 0;
@@ -238,7 +238,7 @@ footer a {
 /* ===================== desktop media query ========================== */
 @media only screen and (min-width: 40em) {
   header {
-    width: 100%;
+    width: calc(100% - 2rem);
     text-align: left;
   }
   h1 {
